# FEM-A-1

./: .gitignore  .modules  CMakeCache.txt  CMakeLists  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_help  compile_help.txt  main  main.cpp  parameters.txt  read_input.cpp  run.sh  todolist  update_week_3.docx  update_week_one.docx
FEM-A-week2/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  main  timeline
FEM-A-week2/inc/: print_result.cpp  read_input.cpp
FEM-A-week2/src/: main.cpp
QT/: .qmake.stash  Makefile  QT  QT.pro  heat_equation.cpp  heat_equation.h  heat_equation.ui  main.cpp  moc_heat_equation.cpp  parameters.txt  test4_Qt.pro  ui_heat_equation.h
QT_final/: main.cpp
Qt_test_week2/: Makefile  Qt_test  Qt_test.pro  heat_equation.cpp  heat_equation.h  heat_equation.ui  test4_Qt.pro  ui_heat_equation.h
Setup_guides/: CCV_GUI_guide  MPI  Qt_on_CCV_guide  ccv_software_list  github_ccv_setup
inc/: algorithm.cpp  algorithm.h  algorithm2D.cpp  algorithm2D.h  algorithm3D.cpp  algorithm3D.h  convergence.cpp  convergence.h  old2d_print_result.cpp  print_output1d.cpp  print_result.cpp  print_result.h  read_input.cpp  read_input.h
output/: 1dplotall.p  2dplotall.p
output/2Doutput/: 2dplotall.p
plotting/: plotall2d.p  script2d.p
plotting/1D/: gpall.sh  plot1d.p  script.p
plotting/2D/: 2dplotall.p  script2d.p
qt/: heat_equation.cpp  heat_equation.cpp.autosave  main.cpp  parameters.txt
src/: main.cpp  temp full header
